parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> parse_sparql
Rule 1     parse_sparql -> prefix_list query order_by limit offset
Rule 2     prefix_list -> prefix prefix_list
Rule 3     prefix_list -> empty
Rule 4     empty -> <empty>
Rule 5     prefix -> PREFIX uri POINT
Rule 6     uri -> ID COLON ID
Rule 7     uri -> ID COLON URI
Rule 8     uri -> URI
Rule 9     order_by -> ORDER BY var_order_list desc_var
Rule 10    order_by -> empty
Rule 11    var_order_list -> empty
Rule 12    var_order_list -> var_order_list desc_var
Rule 13    desc_var -> DESC LPAR VARIABLE RPAR
Rule 14    desc_var -> VARIABLE
Rule 15    desc_var -> ASC LPAR VARIABLE RPAR
Rule 16    desc_var -> unary_func LPAR desc_var RPAR
Rule 17    limit -> LIMIT NUMBER
Rule 18    limit -> empty
Rule 19    offset -> OFFSET NUMBER
Rule 20    offset -> empty
Rule 21    query -> SELECT distinct var_list WHERE LKEY group_graph_pattern RKEY
Rule 22    query -> SELECT distinct ALL WHERE LKEY group_graph_pattern RKEY
Rule 23    distinct -> DISTINCT
Rule 24    distinct -> empty
Rule 25    group_graph_pattern -> union_block
Rule 26    union_block -> pjoin_block rest_union_block POINT pjoin_block
Rule 27    union_block -> pjoin_block rest_union_block pjoin_block
Rule 28    union_block -> pjoin_block rest_union_block
Rule 29    pjoin_block -> LKEY join_block RKEY
Rule 30    pjoin_block -> join_block
Rule 31    pjoin_block -> empty
Rule 32    rest_union_block -> empty
Rule 33    rest_union_block -> UNION LKEY join_block rest_union_block RKEY rest_union_block
Rule 34    join_block -> LKEY union_block RKEY rest_join_block
Rule 35    join_block -> bgp rest_join_block
Rule 36    rest_join_block -> empty
Rule 37    rest_join_block -> POINT bgp rest_join_block
Rule 38    rest_join_block -> bgp rest_join_block
Rule 39    bgp -> LKEY bgp UNION bgp rest_union_block RKEY
Rule 40    bgp -> bgp UNION bgp rest_union_block
Rule 41    bgp -> triple
Rule 42    bgp -> FILTER LPAR expression RPAR
Rule 43    bgp -> FILTER express_rel
Rule 44    bgp -> OPTIONAL LKEY group_graph_pattern RKEY
Rule 45    bgp -> LKEY join_block RKEY
Rule 46    expression -> express_rel LOGOP expression
Rule 47    expression -> express_rel
Rule 48    expression -> LPAR expression RPAR
Rule 49    express_rel -> express_arg RELOP express_rel
Rule 50    express_rel -> express_arg
Rule 51    express_rel -> LPAR express_rel RPAR
Rule 52    express_rel -> NEG LPAR expression RPAR
Rule 53    express_rel -> NEG express_rel
Rule 54    express_arg -> uri
Rule 55    express_arg -> VARIABLE
Rule 56    express_arg -> CONSTANT
Rule 57    express_arg -> NUMBER
Rule 58    express_arg -> NUMBER POINT NUMBER
Rule 59    express_arg -> REGEX LPAR express_arg COMA pattern_arg regex_flag
Rule 60    regex_flag -> RPAR
Rule 61    regex_flag -> COMA pattern_arg RPAR
Rule 62    pattern_arg -> CONSTANT
Rule 63    express_arg -> binary_func LPAR express_arg COMA express_arg RPAR
Rule 64    express_arg -> unary_func LPAR express_arg RPAR
Rule 65    express_arg -> UNARYOP express_arg
Rule 66    express_arg -> express_arg ARITOP express_arg
Rule 67    express_arg -> LPAR express_arg RPAR
Rule 68    express_arg -> express_arg RELOP express_arg
Rule 69    ARITOP -> PLUS
Rule 70    ARITOP -> MINUS
Rule 71    ARITOP -> TIMES
Rule 72    ARITOP -> DIV
Rule 73    UNARYOP -> PLUS
Rule 74    UNARYOP -> MINUS
Rule 75    LOGOP -> AND
Rule 76    LOGOP -> OR
Rule 77    RELOP -> EQUALS
Rule 78    RELOP -> LESS
Rule 79    RELOP -> LESSEQ
Rule 80    RELOP -> GREATER
Rule 81    RELOP -> GREATEREQ
Rule 82    RELOP -> NEQUALS
Rule 83    binary_func -> REGEX
Rule 84    binary_func -> SAMETERM
Rule 85    binary_func -> LANGMATCHES
Rule 86    binary_func -> CONSTANT
Rule 87    binary_func -> CONTAINS
Rule 88    unary_func -> BOUND
Rule 89    unary_func -> ISIRI
Rule 90    unary_func -> ISURI
Rule 91    unary_func -> ISBLANK
Rule 92    unary_func -> ISLITERAL
Rule 93    unary_func -> LANG
Rule 94    unary_func -> DATATYPE
Rule 95    unary_func -> STR
Rule 96    unary_func -> UPPERCASE
Rule 97    unary_func -> DOUBLE
Rule 98    unary_func -> INTEGER
Rule 99    unary_func -> DECIMAL
Rule 100   unary_func -> FLOAT
Rule 101   unary_func -> STRING
Rule 102   unary_func -> BOOLEAN
Rule 103   unary_func -> DATETIME
Rule 104   unary_func -> NONPOSINT
Rule 105   unary_func -> NEGATIVEINT
Rule 106   unary_func -> LONG
Rule 107   unary_func -> INT
Rule 108   unary_func -> SHORT
Rule 109   unary_func -> BYTE
Rule 110   unary_func -> NONNEGINT
Rule 111   unary_func -> UNSIGNEDLONG
Rule 112   unary_func -> UNSIGNEDINT
Rule 113   unary_func -> UNSIGNEDSHORT
Rule 114   unary_func -> UNSIGNEDBYTE
Rule 115   unary_func -> POSITIVEINT
Rule 116   unary_func -> ID COLON ID
Rule 117   unary_func -> uri
Rule 118   unary_func -> UCASE
Rule 119   unary_func -> LCASE
Rule 120   var_list -> var_list VARIABLE
Rule 121   var_list -> VARIABLE
Rule 122   triple -> subject predicate object
Rule 123   predicate -> ID
Rule 124   predicate -> uri
Rule 125   predicate -> VARIABLE
Rule 126   subject -> uri
Rule 127   subject -> VARIABLE
Rule 128   object -> uri
Rule 129   object -> VARIABLE
Rule 130   object -> CONSTANT

Terminals, with rules where they appear

ALL                  : 22
AND                  : 75
ASC                  : 15
BOOLEAN              : 102
BOUND                : 88
BY                   : 9
BYTE                 : 109
COLON                : 6 7 116
COMA                 : 59 61 63
CONSTANT             : 56 62 86 130
CONTAINS             : 87
DATATYPE             : 94
DATETIME             : 103
DECIMAL              : 99
DESC                 : 13
DISTINCT             : 23
DIV                  : 72
DOUBLE               : 97
EQUALS               : 77
FILTER               : 42 43
FLOAT                : 100
GREATER              : 80
GREATEREQ            : 81
ID                   : 6 6 7 116 116 123
INT                  : 107
INTEGER              : 98
ISBLANK              : 91
ISIRI                : 89
ISLITERAL            : 92
ISURI                : 90
LANG                 : 93
LANGMATCHES          : 85
LCASE                : 119
LESS                 : 78
LESSEQ               : 79
LIMIT                : 17
LKEY                 : 21 22 29 33 34 39 44 45
LONG                 : 106
LPAR                 : 13 15 16 42 48 51 52 59 63 64 67
MINUS                : 70 74
NEG                  : 52 53
NEGATIVEINT          : 105
NEQUALS              : 82
NONNEGINT            : 110
NONPOSINT            : 104
NUMBER               : 17 19 57 58 58
OFFSET               : 19
OPTIONAL             : 44
OR                   : 76
ORDER                : 9
PLUS                 : 69 73
POINT                : 5 26 37 58
POSITIVEINT          : 115
PREFIX               : 5
REGEX                : 59 83
RKEY                 : 21 22 29 33 34 39 44 45
RPAR                 : 13 15 16 42 48 51 52 60 61 63 64 67
SAMETERM             : 84
SELECT               : 21 22
SHORT                : 108
STR                  : 95
STRING               : 101
TIMES                : 71
UCASE                : 118
UNION                : 33 39 40
UNSIGNEDBYTE         : 114
UNSIGNEDINT          : 112
UNSIGNEDLONG         : 111
UNSIGNEDSHORT        : 113
UPPERCASE            : 96
URI                  : 7 8
VARIABLE             : 13 14 15 55 120 121 125 127 129
WHERE                : 21 22
error                : 

Nonterminals, with rules where they appear

ARITOP               : 66
LOGOP                : 46
RELOP                : 49 68
UNARYOP              : 65
bgp                  : 35 37 38 39 39 40 40
binary_func          : 63
desc_var             : 9 12 16
distinct             : 21 22
empty                : 3 10 11 18 20 24 31 32 36
express_arg          : 49 50 59 63 63 64 65 66 66 67 68 68
express_rel          : 43 46 47 49 51 53
expression           : 42 46 48 52
group_graph_pattern  : 21 22 44
join_block           : 29 30 33 45
limit                : 1
object               : 122
offset               : 1
order_by             : 1
parse_sparql         : 0
pattern_arg          : 59 61
pjoin_block          : 26 26 27 27 28
predicate            : 122
prefix               : 2
prefix_list          : 1 2
query                : 1
regex_flag           : 59
rest_join_block      : 34 35 37 38
rest_union_block     : 26 27 28 33 33 39 40
subject              : 122
triple               : 41
unary_func           : 16 64
union_block          : 25 34
uri                  : 5 54 117 124 126 128
var_list             : 21 120
var_order_list       : 9 12

Parsing method: LALR

state 0

    (0) S' -> . parse_sparql
    (1) parse_sparql -> . prefix_list query order_by limit offset
    (2) prefix_list -> . prefix prefix_list
    (3) prefix_list -> . empty
    (5) prefix -> . PREFIX uri POINT
    (4) empty -> .

    PREFIX          shift and go to state 1
    SELECT          reduce using rule 4 (empty -> .)

    parse_sparql                   shift and go to state 2
    prefix                         shift and go to state 3
    prefix_list                    shift and go to state 4
    empty                          shift and go to state 5

state 1

    (5) prefix -> PREFIX . uri POINT
    (6) uri -> . ID COLON ID
    (7) uri -> . ID COLON URI
    (8) uri -> . URI

    ID              shift and go to state 8
    URI             shift and go to state 6

    uri                            shift and go to state 7

state 2

    (0) S' -> parse_sparql .



state 3

    (2) prefix_list -> prefix . prefix_list
    (2) prefix_list -> . prefix prefix_list
    (3) prefix_list -> . empty
    (5) prefix -> . PREFIX uri POINT
    (4) empty -> .

    PREFIX          shift and go to state 1
    SELECT          reduce using rule 4 (empty -> .)

    prefix                         shift and go to state 3
    prefix_list                    shift and go to state 9
    empty                          shift and go to state 5

state 4

    (1) parse_sparql -> prefix_list . query order_by limit offset
    (21) query -> . SELECT distinct var_list WHERE LKEY group_graph_pattern RKEY
    (22) query -> . SELECT distinct ALL WHERE LKEY group_graph_pattern RKEY

    SELECT          shift and go to state 11

    query                          shift and go to state 10

state 5

    (3) prefix_list -> empty .

    SELECT          reduce using rule 3 (prefix_list -> empty .)


state 6

    (8) uri -> URI .

    PLUS            reduce using rule 8 (uri -> URI .)
    MINUS           reduce using rule 8 (uri -> URI .)
    TIMES           reduce using rule 8 (uri -> URI .)
    DIV             reduce using rule 8 (uri -> URI .)
    EQUALS          reduce using rule 8 (uri -> URI .)
    LESS            reduce using rule 8 (uri -> URI .)
    LESSEQ          reduce using rule 8 (uri -> URI .)
    GREATER         reduce using rule 8 (uri -> URI .)
    GREATEREQ       reduce using rule 8 (uri -> URI .)
    NEQUALS         reduce using rule 8 (uri -> URI .)
    UNION           reduce using rule 8 (uri -> URI .)
    POINT           reduce using rule 8 (uri -> URI .)
    LKEY            reduce using rule 8 (uri -> URI .)
    FILTER          reduce using rule 8 (uri -> URI .)
    OPTIONAL        reduce using rule 8 (uri -> URI .)
    VARIABLE        reduce using rule 8 (uri -> URI .)
    ID              reduce using rule 8 (uri -> URI .)
    URI             reduce using rule 8 (uri -> URI .)
    RKEY            reduce using rule 8 (uri -> URI .)
    RPAR            reduce using rule 8 (uri -> URI .)
    AND             reduce using rule 8 (uri -> URI .)
    OR              reduce using rule 8 (uri -> URI .)
    COMA            reduce using rule 8 (uri -> URI .)
    LPAR            reduce using rule 8 (uri -> URI .)
    CONSTANT        reduce using rule 8 (uri -> URI .)


state 7

    (5) prefix -> PREFIX uri . POINT

    POINT           shift and go to state 12


state 8

    (6) uri -> ID . COLON ID
    (7) uri -> ID . COLON URI

    COLON           shift and go to state 13


state 9

    (2) prefix_list -> prefix prefix_list .

    SELECT          reduce using rule 2 (prefix_list -> prefix prefix_list .)


state 10

    (1) parse_sparql -> prefix_list query . order_by limit offset
    (9) order_by -> . ORDER BY var_order_list desc_var
    (10) order_by -> . empty
    (4) empty -> .

    ORDER           shift and go to state 15
    LIMIT           reduce using rule 4 (empty -> .)
    OFFSET          reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    order_by                       shift and go to state 14
    empty                          shift and go to state 16

state 11

    (21) query -> SELECT . distinct var_list WHERE LKEY group_graph_pattern RKEY
    (22) query -> SELECT . distinct ALL WHERE LKEY group_graph_pattern RKEY
    (23) distinct -> . DISTINCT
    (24) distinct -> . empty
    (4) empty -> .

    DISTINCT        shift and go to state 18
    ALL             reduce using rule 4 (empty -> .)
    VARIABLE        reduce using rule 4 (empty -> .)

    distinct                       shift and go to state 17
    empty                          shift and go to state 19

state 12

    (5) prefix -> PREFIX uri POINT .

    PREFIX          reduce using rule 5 (prefix -> PREFIX uri POINT .)
    SELECT          reduce using rule 5 (prefix -> PREFIX uri POINT .)


state 13

    (6) uri -> ID COLON . ID
    (7) uri -> ID COLON . URI

    ID              shift and go to state 20
    URI             shift and go to state 21


state 14

    (1) parse_sparql -> prefix_list query order_by . limit offset
    (17) limit -> . LIMIT NUMBER
    (18) limit -> . empty
    (4) empty -> .

    LIMIT           shift and go to state 22
    OFFSET          reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    limit                          shift and go to state 23
    empty                          shift and go to state 24

state 15

    (9) order_by -> ORDER . BY var_order_list desc_var

    BY              shift and go to state 25


state 16

    (10) order_by -> empty .

    LIMIT           reduce using rule 10 (order_by -> empty .)
    OFFSET          reduce using rule 10 (order_by -> empty .)
    $end            reduce using rule 10 (order_by -> empty .)


state 17

    (21) query -> SELECT distinct . var_list WHERE LKEY group_graph_pattern RKEY
    (22) query -> SELECT distinct . ALL WHERE LKEY group_graph_pattern RKEY
    (120) var_list -> . var_list VARIABLE
    (121) var_list -> . VARIABLE

    ALL             shift and go to state 26
    VARIABLE        shift and go to state 27

    var_list                       shift and go to state 28

state 18

    (23) distinct -> DISTINCT .

    ALL             reduce using rule 23 (distinct -> DISTINCT .)
    VARIABLE        reduce using rule 23 (distinct -> DISTINCT .)


state 19

    (24) distinct -> empty .

    ALL             reduce using rule 24 (distinct -> empty .)
    VARIABLE        reduce using rule 24 (distinct -> empty .)


state 20

    (6) uri -> ID COLON ID .

    ID              reduce using rule 6 (uri -> ID COLON ID .)
    VARIABLE        reduce using rule 6 (uri -> ID COLON ID .)
    URI             reduce using rule 6 (uri -> ID COLON ID .)
    UNION           reduce using rule 6 (uri -> ID COLON ID .)
    POINT           reduce using rule 6 (uri -> ID COLON ID .)
    LKEY            reduce using rule 6 (uri -> ID COLON ID .)
    FILTER          reduce using rule 6 (uri -> ID COLON ID .)
    OPTIONAL        reduce using rule 6 (uri -> ID COLON ID .)
    RKEY            reduce using rule 6 (uri -> ID COLON ID .)
    CONSTANT        reduce using rule 6 (uri -> ID COLON ID .)


state 21

    (7) uri -> ID COLON URI .

    PLUS            reduce using rule 7 (uri -> ID COLON URI .)
    MINUS           reduce using rule 7 (uri -> ID COLON URI .)
    TIMES           reduce using rule 7 (uri -> ID COLON URI .)
    DIV             reduce using rule 7 (uri -> ID COLON URI .)
    EQUALS          reduce using rule 7 (uri -> ID COLON URI .)
    LESS            reduce using rule 7 (uri -> ID COLON URI .)
    LESSEQ          reduce using rule 7 (uri -> ID COLON URI .)
    GREATER         reduce using rule 7 (uri -> ID COLON URI .)
    GREATEREQ       reduce using rule 7 (uri -> ID COLON URI .)
    NEQUALS         reduce using rule 7 (uri -> ID COLON URI .)
    UNION           reduce using rule 7 (uri -> ID COLON URI .)
    POINT           reduce using rule 7 (uri -> ID COLON URI .)
    LKEY            reduce using rule 7 (uri -> ID COLON URI .)
    FILTER          reduce using rule 7 (uri -> ID COLON URI .)
    OPTIONAL        reduce using rule 7 (uri -> ID COLON URI .)
    VARIABLE        reduce using rule 7 (uri -> ID COLON URI .)
    ID              reduce using rule 7 (uri -> ID COLON URI .)
    URI             reduce using rule 7 (uri -> ID COLON URI .)
    RKEY            reduce using rule 7 (uri -> ID COLON URI .)
    RPAR            reduce using rule 7 (uri -> ID COLON URI .)
    AND             reduce using rule 7 (uri -> ID COLON URI .)
    OR              reduce using rule 7 (uri -> ID COLON URI .)
    COMA            reduce using rule 7 (uri -> ID COLON URI .)
    LPAR            reduce using rule 7 (uri -> ID COLON URI .)
    CONSTANT        reduce using rule 7 (uri -> ID COLON URI .)


state 22

    (17) limit -> LIMIT . NUMBER

    NUMBER          shift and go to state 29


state 23

    (1) parse_sparql -> prefix_list query order_by limit . offset
    (19) offset -> . OFFSET NUMBER
    (20) offset -> . empty
    (4) empty -> .

    OFFSET          shift and go to state 30
    $end            reduce using rule 4 (empty -> .)

    offset                         shift and go to state 31
    empty                          shift and go to state 32

state 24

    (18) limit -> empty .

    OFFSET          reduce using rule 18 (limit -> empty .)
    $end            reduce using rule 18 (limit -> empty .)


state 25

    (9) order_by -> ORDER BY . var_order_list desc_var
    (11) var_order_list -> . empty
    (12) var_order_list -> . var_order_list desc_var
    (4) empty -> .

    DESC            reduce using rule 4 (empty -> .)
    VARIABLE        reduce using rule 4 (empty -> .)
    ASC             reduce using rule 4 (empty -> .)
    BOUND           reduce using rule 4 (empty -> .)
    ISIRI           reduce using rule 4 (empty -> .)
    ISURI           reduce using rule 4 (empty -> .)
    ISBLANK         reduce using rule 4 (empty -> .)
    ISLITERAL       reduce using rule 4 (empty -> .)
    LANG            reduce using rule 4 (empty -> .)
    DATATYPE        reduce using rule 4 (empty -> .)
    STR             reduce using rule 4 (empty -> .)
    UPPERCASE       reduce using rule 4 (empty -> .)
    DOUBLE          reduce using rule 4 (empty -> .)
    INTEGER         reduce using rule 4 (empty -> .)
    DECIMAL         reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    STRING          reduce using rule 4 (empty -> .)
    BOOLEAN         reduce using rule 4 (empty -> .)
    DATETIME        reduce using rule 4 (empty -> .)
    NONPOSINT       reduce using rule 4 (empty -> .)
    NEGATIVEINT     reduce using rule 4 (empty -> .)
    LONG            reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    SHORT           reduce using rule 4 (empty -> .)
    BYTE            reduce using rule 4 (empty -> .)
    NONNEGINT       reduce using rule 4 (empty -> .)
    UNSIGNEDLONG    reduce using rule 4 (empty -> .)
    UNSIGNEDINT     reduce using rule 4 (empty -> .)
    UNSIGNEDSHORT   reduce using rule 4 (empty -> .)
    UNSIGNEDBYTE    reduce using rule 4 (empty -> .)
    POSITIVEINT     reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    UCASE           reduce using rule 4 (empty -> .)
    LCASE           reduce using rule 4 (empty -> .)
    URI             reduce using rule 4 (empty -> .)

    var_order_list                 shift and go to state 33
    empty                          shift and go to state 34

state 26

    (22) query -> SELECT distinct ALL . WHERE LKEY group_graph_pattern RKEY

    WHERE           shift and go to state 35


state 27

    (121) var_list -> VARIABLE .

    WHERE           reduce using rule 121 (var_list -> VARIABLE .)
    VARIABLE        reduce using rule 121 (var_list -> VARIABLE .)


state 28

    (21) query -> SELECT distinct var_list . WHERE LKEY group_graph_pattern RKEY
    (120) var_list -> var_list . VARIABLE

    WHERE           shift and go to state 37
    VARIABLE        shift and go to state 36


state 29

    (17) limit -> LIMIT NUMBER .

    OFFSET          reduce using rule 17 (limit -> LIMIT NUMBER .)
    $end            reduce using rule 17 (limit -> LIMIT NUMBER .)


state 30

    (19) offset -> OFFSET . NUMBER

    NUMBER          shift and go to state 38


state 31

    (1) parse_sparql -> prefix_list query order_by limit offset .

    $end            reduce using rule 1 (parse_sparql -> prefix_list query order_by limit offset .)


state 32

    (20) offset -> empty .

    $end            reduce using rule 20 (offset -> empty .)


state 33

    (9) order_by -> ORDER BY var_order_list . desc_var
    (12) var_order_list -> var_order_list . desc_var
    (13) desc_var -> . DESC LPAR VARIABLE RPAR
    (14) desc_var -> . VARIABLE
    (15) desc_var -> . ASC LPAR VARIABLE RPAR
    (16) desc_var -> . unary_func LPAR desc_var RPAR
    (88) unary_func -> . BOUND
    (89) unary_func -> . ISIRI
    (90) unary_func -> . ISURI
    (91) unary_func -> . ISBLANK
    (92) unary_func -> . ISLITERAL
    (93) unary_func -> . LANG
    (94) unary_func -> . DATATYPE
    (95) unary_func -> . STR
    (96) unary_func -> . UPPERCASE
    (97) unary_func -> . DOUBLE
    (98) unary_func -> . INTEGER
    (99) unary_func -> . DECIMAL
    (100) unary_func -> . FLOAT
    (101) unary_func -> . STRING
    (102) unary_func -> . BOOLEAN
    (103) unary_func -> . DATETIME
    (104) unary_func -> . NONPOSINT
    (105) unary_func -> . NEGATIVEINT
    (106) unary_func -> . LONG
    (107) unary_func -> . INT
    (108) unary_func -> . SHORT
    (109) unary_func -> . BYTE
    (110) unary_func -> . NONNEGINT
    (111) unary_func -> . UNSIGNEDLONG
    (112) unary_func -> . UNSIGNEDINT
    (113) unary_func -> . UNSIGNEDSHORT
    (114) unary_func -> . UNSIGNEDBYTE
    (115) unary_func -> . POSITIVEINT
    (116) unary_func -> . ID COLON ID
    (117) unary_func -> . uri
    (118) unary_func -> . UCASE
    (119) unary_func -> . LCASE
    (6) uri -> . ID COLON ID
    (7) uri -> . ID COLON URI
    (8) uri -> . URI

    DESC            shift and go to state 62
    VARIABLE        shift and go to state 58
    ASC             shift and go to state 51
    BOUND           shift and go to state 70
    ISIRI           shift and go to state 71
    ISURI           shift and go to state 41
    ISBLANK         shift and go to state 50
    ISLITERAL       shift and go to state 52
    LANG            shift and go to state 42
    DATATYPE        shift and go to state 45
    STR             shift and go to state 57
    UPPERCASE       shift and go to state 46
    DOUBLE          shift and go to state 68
    INTEGER         shift and go to state 53
    DECIMAL         shift and go to state 55
    FLOAT           shift and go to state 69
    STRING          shift and go to state 54
    BOOLEAN         shift and go to state 72
    DATETIME        shift and go to state 56
    NONPOSINT       shift and go to state 74
    NEGATIVEINT     shift and go to state 39
    LONG            shift and go to state 49
    INT             shift and go to state 67
    SHORT           shift and go to state 40
    BYTE            shift and go to state 59
    NONNEGINT       shift and go to state 63
    UNSIGNEDLONG    shift and go to state 75
    UNSIGNEDINT     shift and go to state 47
    UNSIGNEDSHORT   shift and go to state 43
    UNSIGNEDBYTE    shift and go to state 44
    POSITIVEINT     shift and go to state 60
    ID              shift and go to state 61
    UCASE           shift and go to state 64
    LCASE           shift and go to state 48
    URI             shift and go to state 6

    unary_func                     shift and go to state 73
    desc_var                       shift and go to state 65
    uri                            shift and go to state 66

state 34

    (11) var_order_list -> empty .

    DESC            reduce using rule 11 (var_order_list -> empty .)
    VARIABLE        reduce using rule 11 (var_order_list -> empty .)
    ASC             reduce using rule 11 (var_order_list -> empty .)
    BOUND           reduce using rule 11 (var_order_list -> empty .)
    ISIRI           reduce using rule 11 (var_order_list -> empty .)
    ISURI           reduce using rule 11 (var_order_list -> empty .)
    ISBLANK         reduce using rule 11 (var_order_list -> empty .)
    ISLITERAL       reduce using rule 11 (var_order_list -> empty .)
    LANG            reduce using rule 11 (var_order_list -> empty .)
    DATATYPE        reduce using rule 11 (var_order_list -> empty .)
    STR             reduce using rule 11 (var_order_list -> empty .)
    UPPERCASE       reduce using rule 11 (var_order_list -> empty .)
    DOUBLE          reduce using rule 11 (var_order_list -> empty .)
    INTEGER         reduce using rule 11 (var_order_list -> empty .)
    DECIMAL         reduce using rule 11 (var_order_list -> empty .)
    FLOAT           reduce using rule 11 (var_order_list -> empty .)
    STRING          reduce using rule 11 (var_order_list -> empty .)
    BOOLEAN         reduce using rule 11 (var_order_list -> empty .)
    DATETIME        reduce using rule 11 (var_order_list -> empty .)
    NONPOSINT       reduce using rule 11 (var_order_list -> empty .)
    NEGATIVEINT     reduce using rule 11 (var_order_list -> empty .)
    LONG            reduce using rule 11 (var_order_list -> empty .)
    INT             reduce using rule 11 (var_order_list -> empty .)
    SHORT           reduce using rule 11 (var_order_list -> empty .)
    BYTE            reduce using rule 11 (var_order_list -> empty .)
    NONNEGINT       reduce using rule 11 (var_order_list -> empty .)
    UNSIGNEDLONG    reduce using rule 11 (var_order_list -> empty .)
    UNSIGNEDINT     reduce using rule 11 (var_order_list -> empty .)
    UNSIGNEDSHORT   reduce using rule 11 (var_order_list -> empty .)
    UNSIGNEDBYTE    reduce using rule 11 (var_order_list -> empty .)
    POSITIVEINT     reduce using rule 11 (var_order_list -> empty .)
    ID              reduce using rule 11 (var_order_list -> empty .)
    UCASE           reduce using rule 11 (var_order_list -> empty .)
    LCASE           reduce using rule 11 (var_order_list -> empty .)
    URI             reduce using rule 11 (var_order_list -> empty .)


state 35

    (22) query -> SELECT distinct ALL WHERE . LKEY group_graph_pattern RKEY

    LKEY            shift and go to state 76


state 36

    (120) var_list -> var_list VARIABLE .

    WHERE           reduce using rule 120 (var_list -> var_list VARIABLE .)
    VARIABLE        reduce using rule 120 (var_list -> var_list VARIABLE .)


state 37

    (21) query -> SELECT distinct var_list WHERE . LKEY group_graph_pattern RKEY

    LKEY            shift and go to state 77


state 38

    (19) offset -> OFFSET NUMBER .

    $end            reduce using rule 19 (offset -> OFFSET NUMBER .)


state 39

    (105) unary_func -> NEGATIVEINT .

    LPAR            reduce using rule 105 (unary_func -> NEGATIVEINT .)


state 40

    (108) unary_func -> SHORT .

    LPAR            reduce using rule 108 (unary_func -> SHORT .)


state 41

    (90) unary_func -> ISURI .

    LPAR            reduce using rule 90 (unary_func -> ISURI .)


state 42

    (93) unary_func -> LANG .

    LPAR            reduce using rule 93 (unary_func -> LANG .)


state 43

    (113) unary_func -> UNSIGNEDSHORT .

    LPAR            reduce using rule 113 (unary_func -> UNSIGNEDSHORT .)


state 44

    (114) unary_func -> UNSIGNEDBYTE .

    LPAR            reduce using rule 114 (unary_func -> UNSIGNEDBYTE .)


state 45

    (94) unary_func -> DATATYPE .

    LPAR            reduce using rule 94 (unary_func -> DATATYPE .)


state 46

    (96) unary_func -> UPPERCASE .

    LPAR            reduce using rule 96 (unary_func -> UPPERCASE .)


state 47

    (112) unary_func -> UNSIGNEDINT .

    LPAR            reduce using rule 112 (unary_func -> UNSIGNEDINT .)


state 48

    (119) unary_func -> LCASE .

    LPAR            reduce using rule 119 (unary_func -> LCASE .)


state 49

    (106) unary_func -> LONG .

    LPAR            reduce using rule 106 (unary_func -> LONG .)


state 50

    (91) unary_func -> ISBLANK .

    LPAR            reduce using rule 91 (unary_func -> ISBLANK .)


state 51

    (15) desc_var -> ASC . LPAR VARIABLE RPAR

    LPAR            shift and go to state 78


state 52

    (92) unary_func -> ISLITERAL .

    LPAR            reduce using rule 92 (unary_func -> ISLITERAL .)


state 53

    (98) unary_func -> INTEGER .

    LPAR            reduce using rule 98 (unary_func -> INTEGER .)


state 54

    (101) unary_func -> STRING .

    LPAR            reduce using rule 101 (unary_func -> STRING .)


state 55

    (99) unary_func -> DECIMAL .

    LPAR            reduce using rule 99 (unary_func -> DECIMAL .)


state 56

    (103) unary_func -> DATETIME .

    LPAR            reduce using rule 103 (unary_func -> DATETIME .)


state 57

    (95) unary_func -> STR .

    LPAR            reduce using rule 95 (unary_func -> STR .)


state 58

    (14) desc_var -> VARIABLE .

    RPAR            reduce using rule 14 (desc_var -> VARIABLE .)
    LIMIT           reduce using rule 14 (desc_var -> VARIABLE .)
    OFFSET          reduce using rule 14 (desc_var -> VARIABLE .)
    $end            reduce using rule 14 (desc_var -> VARIABLE .)
    DESC            reduce using rule 14 (desc_var -> VARIABLE .)
    VARIABLE        reduce using rule 14 (desc_var -> VARIABLE .)
    ASC             reduce using rule 14 (desc_var -> VARIABLE .)
    BOUND           reduce using rule 14 (desc_var -> VARIABLE .)
    ISIRI           reduce using rule 14 (desc_var -> VARIABLE .)
    ISURI           reduce using rule 14 (desc_var -> VARIABLE .)
    ISBLANK         reduce using rule 14 (desc_var -> VARIABLE .)
    ISLITERAL       reduce using rule 14 (desc_var -> VARIABLE .)
    LANG            reduce using rule 14 (desc_var -> VARIABLE .)
    DATATYPE        reduce using rule 14 (desc_var -> VARIABLE .)
    STR             reduce using rule 14 (desc_var -> VARIABLE .)
    UPPERCASE       reduce using rule 14 (desc_var -> VARIABLE .)
    DOUBLE          reduce using rule 14 (desc_var -> VARIABLE .)
    INTEGER         reduce using rule 14 (desc_var -> VARIABLE .)
    DECIMAL         reduce using rule 14 (desc_var -> VARIABLE .)
    FLOAT           reduce using rule 14 (desc_var -> VARIABLE .)
    STRING          reduce using rule 14 (desc_var -> VARIABLE .)
    BOOLEAN         reduce using rule 14 (desc_var -> VARIABLE .)
    DATETIME        reduce using rule 14 (desc_var -> VARIABLE .)
    NONPOSINT       reduce using rule 14 (desc_var -> VARIABLE .)
    NEGATIVEINT     reduce using rule 14 (desc_var -> VARIABLE .)
    LONG            reduce using rule 14 (desc_var -> VARIABLE .)
    INT             reduce using rule 14 (desc_var -> VARIABLE .)
    SHORT           reduce using rule 14 (desc_var -> VARIABLE .)
    BYTE            reduce using rule 14 (desc_var -> VARIABLE .)
    NONNEGINT       reduce using rule 14 (desc_var -> VARIABLE .)
    UNSIGNEDLONG    reduce using rule 14 (desc_var -> VARIABLE .)
    UNSIGNEDINT     reduce using rule 14 (desc_var -> VARIABLE .)
    UNSIGNEDSHORT   reduce using rule 14 (desc_var -> VARIABLE .)
    UNSIGNEDBYTE    reduce using rule 14 (desc_var -> VARIABLE .)
    POSITIVEINT     reduce using rule 14 (desc_var -> VARIABLE .)
    ID              reduce using rule 14 (desc_var -> VARIABLE .)
    UCASE           reduce using rule 14 (desc_var -> VARIABLE .)
    LCASE           reduce using rule 14 (desc_var -> VARIABLE .)
    URI             reduce using rule 14 (desc_var -> VARIABLE .)


state 59

    (109) unary_func -> BYTE .

    LPAR            reduce using rule 109 (unary_func -> BYTE .)


state 60

    (115) unary_func -> POSITIVEINT .

    LPAR            reduce using rule 115 (unary_func -> POSITIVEINT .)


state 61

    (116) unary_func -> ID . COLON ID
    (6) uri -> ID . COLON ID
    (7) uri -> ID . COLON URI

    COLON           shift and go to state 79


state 62

    (13) desc_var -> DESC . LPAR VARIABLE RPAR

    LPAR            shift and go to state 80


state 63

    (110) unary_func -> NONNEGINT .

    LPAR            reduce using rule 110 (unary_func -> NONNEGINT .)


state 64

    (118) unary_func -> UCASE .

    LPAR            reduce using rule 118 (unary_func -> UCASE .)


state 65
